# serverless

.github/workflows/: node.js.yml
data/: .env  package-lock.json  package.json  pyproject.toml  serverless.yml
data/sls-yml/: parameters.yml  parameters.yml6E53BFF5-0001-412b-8407-E3AEDE763511
data/sls-yml/apigateway/: apigateway.yml  apigateway.yml6E53BFF5-0001-412b-8407-E3AEDE763511
data/sls-yml/database/: database.yml  database.yml6E53BFF5-0001-412b-8407-E3AEDE763511
data/sls-yml/iam/: LambdaRole.yml  rdsdatabaserole.yml  rdsdatabaserole.yml6E53BFF5-0001-412b-8407-E3AEDE763511
data/sls-yml/kms/: kmsforRDS.yml
data/sls-yml/rds/: postgreSQL.yml  subnetgroup.yml  subnetgroup.yml6E53BFF5-0001-412b-8407-E3AEDE763511
data/sls-yml/s3/: s3.yml  s3.yml6E53BFF5-0001-412b-8407-E3AEDE763511
data/sls-yml/secrets/: rdssecrets.yml  rdssecrets.yml6E53BFF5-0001-412b-8407-E3AEDE763511
data/sls-yml/vpc/: vpc.yml  vpc.yml6E53BFF5-0001-412b-8407-E3AEDE763511
