[tool.poetry]
name = "growthos-empower"
version = "0.1.0"
description = ""
authors = ["Vidyasagar <vidyasagar.kotte@accenture.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
botocore = "^1.32.6"
tenacity = "^8.2.3"
tiktoken = "^0.5.1"
openai = "^1.3.5"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
